--- a/RPS.html
+++ b/RPS.html
@@ -1,13 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="RPS.js"> </script>
 </head>
 <body>
-    
+    <h4>The score </h4>
+    <div id="compScore"></div>
+    <div id="userScore"></div>
+
+    <h4>Comments</h4>
+    <div id="comments"></div>
+
+    <h4> Your selection</h1>
+    <button id="rock-button"> Rock </button>
+    <button id="paper-button"> Paper </button>
+    <button id="scissors-button"> Scissors </button>
+
+    <h4> The computer's selection</h4>
+    <button id="random-button"> Select a tool at random</button>
+
 </body>
+<script src="RPS.js"> </script>
 </html>
+
+<!--
+
+
+Add an event listener to the buttons that call your playRound function with the correct playerSelection every time a button is clicked. 
+(you can keep the console.logs for this step)
+
+Add a div for displaying results and change all of your console.logs into DOM methods.
+
+Display the running score, and announce a winner of the game once one player reaches 5 points.
+    
+-->
